command-derive/tests/03-reject-no-code.rs
use command_derive::*;

#[derive(Command)]
enum ClientRequest {
    #[command(code = "HI")]
    Handshake {
        hdid: String
    },
    Ping
}

fn main() {}
